--- a/cadastro.html
+++ b/cadastro.html
@@ -89,6 +89,9 @@
           <button class="btn btn-outline-dark m-4" type="submit">Enviar</button>
         </div>
       </form>
+      <footer>
+        <p class="text-center"><em>&Erick henrique</em></p>
+      </footer>
 
 
 
